# couchfi-player

./: .gitignore  BUILD_SUMMARY.md  LICENSE  NOTICE  README.md  local.properties.example  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_config.h  audio_engine.cpp  audio_engine.h  ring_buffer.h  usb_config.h
app/src/main/cpp/filter/: polyphase_fir.cpp  polyphase_fir.h
app/src/main/cpp/usb/: usb_audio.cpp  usb_audio.h
app/src/main/java/com/couchfi/player/: AdvancedSettingsDialogFragment.kt  BrowseAdapter.kt  DetailFragment.kt  EntryAdapter.kt  FilePickerFragment.kt  GridTileAdapter.kt  HomeFragment.kt  LibraryBrowseFragment.kt  LibraryRootFragment.kt  MainActivity.kt  OutputModeDialogFragment.kt  PlayerFragment.kt  ScanFragment.kt  (+4 more)
app/src/main/res/drawable/: button_focus_bg.xml  entry_focus_bg.xml  ic_ff.xml  ic_next.xml  ic_pause.xml  ic_play.xml  ic_prev.xml  ic_rew.xml  ic_shuffle.xml  ic_stop.xml  icon_focus_bg.xml  tab_focus_bg.xml  tile_art_placeholder.xml  tile_focus_bg.xml
app/src/main/res/layout/: dialog_advanced_settings.xml  dialog_output_mode.xml  dialog_radio_gain.xml  dialog_settings.xml  dialog_smb_setup.xml  fragment_detail.xml  fragment_file_picker.xml  fragment_home.xml  fragment_library_browse.xml  fragment_library_root.xml  fragment_player.xml  fragment_scan.xml  item_browse.xml  item_entry.xml  item_grid_tile.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: usb_device_filter.xml
tests/: run.sh
tests/filter/: test_polyphase_fir.cpp
(+15 files in other folders)
